# clearway

./: .gitignore  README.md
clearway-for-gmail/: IMPLEMENTATION.md  NOTES.md  README.md  gmail_bridge.py  pyproject.toml
clearway-for-protonmail/: IMPLEMENTATION.md  README.md  protonmail_bridge.py  pyproject.toml
clearway-for-protonmail/stubs/: dotenv.pyi
clearway-for-teams/: IMPLEMENTATION.md  README.md  list_stores.py  list_unread_chats.py  list_unread_teams_topics.py  main.py  pyproject.toml  read_db.py  research_unread.py  teams_bridge.py  unread.py  viewer.py
clearway-for-teams/libteamsdb/: README.md  generate_synthetic_data.py  pyproject.toml
clearway-for-teams/libteamsdb/libteamsdb/: __init__.py  discovery.py  exceptions.py  extractor.py  models.py  synthetic.py  types.py
clearway-for-teams/libteamsdb/tests/: __init__.py  conftest.py  test_models.py
clearway-for-teams/stubs/: ccl_chromium_indexeddb.pyi  ccl_chromium_reader.pyi
clearway-for-teams/stubs/ccl_chromium_reader/: __init__.pyi  ccl_chromium_indexeddb.pyi
clearway-for-telegram/: IMPLEMENTATION.md  README.md  pyproject.toml  telegram_bridge.py
clearway-for-whatsapp/: IMPLEMENTATION.md  README.md  pyproject.toml  whatsapp_bridge.py
