[project]
name = "clearway-for-protonmail"
version = "0.1.0"
description = "Clearway bridge for Protonmail using IMAP (via hydroxide)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "basedpyright>=1.0.0",
    "mypy>=1.0.0",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
mypy_path = "stubs"

[tool.basedpyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"
